# digicod

./: dc_aliases.zsh
dcback/: .gitignore  postgres_commands.txt  pyproject.toml  pyproject.toml.backup
dcback/api/: authview.py  models.py  orderprocess.py  serializers.py  tests.py  urls.py
dcback/apps/: priceConverter.py  textchoices.py
dcback/cli/: h_ai_claude.py  h_django.py  h_shell.py  h_util.py
dcback/config/: asgi.py  consumers.py  hosts.py  local_urls.py  loginx.py  pagination.py  settings.py  shopsettings  shopsettings.json  urls.py
dcback/cryptcurr/: apps.py
dcback/eshop/: admin.py  apps.py  currency_prices.py  djoser_messages.py  kunden_email.py  limits.json  mailemail.py  models.py  models_kinguin.py  models_utils.py  neosurf_soap.xml  order_email_send.py  order_email_tmp.py  product_order_controller.py  resendOrderMail.py  serializers.py  signals.json  signals.py  views.py
dcback/eshop_api/: pagination.py  urls.py  utils.py
dcback/googleutils/: idtokenver.py
dcback/lab/: EXAMPLES.py  MyDB  check_service.sh  destination.txt  discspace.sh  function.pkl  htmlmail.py  neo_fraud_user.py  neocheck.py  neosurf_fraud.txt  pf2.py  qs.dictionary  revolut.json  test.py  test2.py  test3.py  wg.sh
dcback/lib/: DictObjJSONField.py  PersistentDictObj.py
dcback/programs/: backup_pgdatabase.py  filewatcher.py  product_prices_sinc.conf  product_prices_sinc.py  sinc_dir.conf  sinc_dir.py
dcback/revolut/: index.py
dcback/sockets/: authent.py  authentication.py  mit_header.py  notify_order_status.py  signal_sock.py  socket_server.py
dcback/systemd/: gitauto.service  prices_sinc.py  prices_sync.service  temporal_prepaidforge_sync_worker.service
dcback/templates/: cryptopayment.html  invoice.html  uconst.html
dcback/temporal_order_process_scaffold/: README.md  requirements.txt
dcback/utils/: PriceRabatt.py  priceConverter.py  (+1 more)
(+526 files in other folders)
