[project]
name = "dcback"
version = "0.1.0"
description = ""
authors = ["ODYS <odys@odys>"]
package-mode = false
#readme = "README.md"

dependencies = [
"acme",
"aiosignal",
"aniso8601",
"apscheduler",
"asgiref",
"attrs",
"configargparse",
"django-cors-headers",
"django-dbbackup>=5.3.0",
"django-filter",
"django-hosts>=7.0.0",
"django-templated-mail",
"djangorestframework",
"djangorestframework-simplejwt",
"djoser",
"frozenlist",
"google-api-python-client",
"google-auth>=2.30.0",
"google-auth-httplib2",
"gunicorn",
"httplib2",
"importlib-metadata",
"jsons",
"loguru",
"markdown",
"more-itertools",
"multidict",
"oauth2client",
"oauthlib",
"pdfkit",
"pickle-mixin",
"python-binance",
"python-dateutil",
"python-dotenv",
"python3-openid",
"pytz",
"pytz-deprecation-shim",
"pyyaml",
"requests",
"requests-oauthlib",
"requests-toolbelt",
"rsa",
"sendmail",
"six",
"style",
"tzdata",
"tzlocal",
"urllib3",
"websockets",
"whitenoise>=6.11.0",
"xmltodict",
"yarl",
"zipp",
"pip-autoremove",
"pycryptodome",
"qrcode",
"lxml",
"pillow",
"regex",
"dateparser",
"wkhtmltopdf",
"redis",
"djangogrpcframework",
"rq",
"pyopenssl",
"webauthn>=1.11.1",
"reportlab>=4.0.7",
"hiredis>=2.3.2",
"mouse>=0.7.1",
"psycopg[binary]>=3.1.19",
"google-auth-oauthlib>=1.2.0",
"hvac>=2.3.0",
"channels-redis>=4.2.1",
"websocket-client>=1.8.0",
"daphne>=4.1.2",
"twilio>=9.4.1",
"pycountry>=24.6.1",
"pyjwt>=2.10.1",
"pgadmin4>=9.0",
"django-redis>=5.4.0",
"channels>=4.2.2",
"django>=4.0.0",
"django-ipware>=7.0.1",
"numba>=0.63.1",
"cython>=3.2.4",
"str2bool>=1.1",
# UI & Admin UI,
"django-jazzmin>=3.0.1",
"django-admin-adminlte>=1.0.14",
# Tools,
"django-debug-toolbar>=4.4.6",
"pandas>=2.2.3",
"graphviz>=0.20.3",
"astor>=0.8.1",
"temporalio>=1.26.0",
"httpx>=0.28.1",
]
